[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/units/character_2d5_component.gd" id="1_script"]

[sub_resource type="ViewportTexture" id="ViewportTexture_1"]
viewport_path = NodePath("Sprite3D/SubViewport")

[node name="Character2D5Component" type="Node3D"]
script = ExtResource("1_script")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1.41421, 0, 1.41421, 0, 2, 0, -1.41421, 0, 1.41421, 0, 0, 0)
pixel_size = 0.00999999978
billboard = 0
shaded = true
alpha_cut = 0
texture_filter = 0
texture = SubResource("ViewportTexture_1")

[node name="SubViewport" type="SubViewport" parent="Sprite3D"]
transparent_bg = true
size = Vector2i(250, 250)

[node name="Model2D" type="Node2D" parent="Sprite3D/SubViewport"]

[node name="CharacterSprite" type="AnimatedSprite2D" parent="Sprite3D/SubViewport/Model2D"]
position = Vector2(125, 125)
scale = Vector2(2.5, 2.5)
centered = true
